T02 SQLite List Contacts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="enter_email">Email</string>
     <string name="tv_contact_name">Contact name</string>
     <string name="tv_contact_phone">Contact Phone</string>
+    <string name="search">Search</string>
 </resources>
